feat: add CardClass

--- a/module01/src/index.css
+++ b/module01/src/index.css
@@ -26,6 +26,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
