fix: delet react relative and fix nav

--- a/module01/src/index.css
+++ b/module01/src/index.css
@@ -57,7 +57,10 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+#root {
+  position: relative;
+  top: 80px;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
